# Silly-Edit

./: .gitignore  CMakeLists.txt  README.md  about.md  changelog.md  credits.md  mod.json  todo.md
resources/sheet/: quickfill.plist  ruler.plist
src/features/: compat.cpp  compat.hpp  shared.cpp  shared.hpp
src/features/better-layers/: include.hpp  layer-settings.cpp  main.cpp  popup.cpp  settings.hpp
src/features/better-scale/: main.cpp  settings.hpp
src/features/better-select-all/: include.hpp  main.cpp  popup.cpp  settings.hpp
src/features/copy-paste-object-strings/: main.cpp  settings.hpp
src/features/default-object-options/: example.jsonc  include.hpp  main.cpp  options.cpp  parse.cpp  settings.hpp
src/features/flood-fill/: include.hpp  logic.cpp  main.cpp  settings.hpp
src/features/free-snap/: main.cpp  settings.hpp
src/features/object-tab-icons/: main.cpp  settings.hpp
src/features/replace-objects/: UNFINISHED-ACTIONS.cpp  UNFINISHED-SYNTAX.md  include.hpp  main.cpp  menu.cpp  query.cpp  replace.cpp  settings.hpp  syntax.md
src/features/ruler/: main.cpp  settings.hpp
src/features/settings/: hooks.cpp  popup.cpp  popup.hpp  setting-button.cpp  setting-button.hpp  settings.hpp
src/features/setup-startpos/: main.cpp  settings.hpp
src/features/templates/: main.cpp  settings.hpp
src/features/text-object-utils/: main.cpp  settings.hpp
src/features/zoom-input/: main.cpp  settings.hpp
src/internal/: settings.cpp  settings.hpp
src/internal/utils/: UNFINISHED-PARSING.hpp  setupnode.hpp  utils-nodes.cpp  utils-nodes.hpp  utils-other.cpp  (+3 more)
(+7 files in other folders)
